--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/iam-dev-deva/web-files-source/main/arcee/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arcee</title>
+    <title>Arcee Clicks</title>
   </head>
   <body>
     <div id="root"></div>
